--- a/index.html
+++ b/index.html
@@ -1507,13 +1507,15 @@ labels:{
   <div class="table-responsive">
   <table class="table">
   <thead>
-    <tr>
+    <tr style="position:static">
       <th scope="col">#</th>
       <th scope="col">Processor</th>
       <th scope="col">RAM size</th>
       <th scope="col">Camera</th>
       <th scope="col">Specs</th>
       <th scope="col">the</th>
+      <th scope="col">dset</th>
+      <th scope="col">gjiu</th>
     </tr>
   </thead>
   <tbody>
@@ -1522,14 +1524,14 @@ labels:{
       <td class="table-success">Mark</td>
       <td>Otto</td>
       <td>@mdo</td>
-      <td>apple</td><td>ball</td>
+      <td>apple</td><td>ball</td><td>abcd</td><td>sdfg</td>
     </tr>
     <tr>
       <th scope="row">Oppo A74 5g</th>
       <td>Jacob</td>
       <td class="table-danger">Thornton</td>
       <td>@fat</td>
-      <td></td><td></td>
+      <td></td><td></td><td></td><td></td>
     </tr>
     <tr>
       <th scope="row">Redmi note 11</th>
