--- a/index.html
+++ b/index.html
@@ -1507,7 +1507,7 @@ labels:{
   <div class="table-responsive">
   <table class="table">
   <thead>
-    <tr style="position:static">
+    <tr>
       <th scope="col">#</th>
       <th scope="col">Processor</th>
       <th scope="col">RAM size</th>
@@ -1520,21 +1520,21 @@ labels:{
   </thead>
   <tbody>
     <tr>
-      <th scope="row">Redmi note 10s</th>
+      <th scope="row" style="position:sticky">Redmi note 10s</th>
       <td class="table-success">Mark</td>
       <td>Otto</td>
       <td>@mdo</td>
       <td>apple</td><td>ball</td><td>abcd</td><td>sdfg</td>
     </tr>
     <tr>
-      <th scope="row">Oppo A74 5g</th>
+      <th scope="row" style="position:sticky">Oppo A74 5g</th>
       <td>Jacob</td>
       <td class="table-danger">Thornton</td>
       <td>@fat</td>
       <td></td><td></td><td></td><td></td>
     </tr>
     <tr>
-      <th scope="row">Redmi note 11</th>
+      <th scope="row"  style="position:sticky" >Redmi note 11</th>
       <td>Larry the Bird</td>
       <td>This</td>
       <td>@twitter</td>
