--- a/index.html
+++ b/index.html
@@ -1520,14 +1520,14 @@ labels:{
   </thead>
   <tbody>
     <tr>
-      <th scope="row" style="position:sticky;left:0px">Redmi note 10s</th>
+      <th scope="row" style="position:sticky;left:0px;background-color:#dddddd">Redmi note 10s</th>
       <td class="table-success">Mark</td>
       <td>Otto</td>
       <td>@mdo</td>
       <td>apple</td><td>ball</td><td>abcd</td><td>sdfg</td>
     </tr>
     <tr>
-      <th scope="row" style="position:sticky;left:0px">Oppo A74 5g</th>
+      <th scope="row" style="position:sticky;left:0px;background-color:#dddddd">Oppo A74 5g</th>
       <td>Jacob</td>
       <td class="table-danger">Thornton</td>
       <td>@fat</td>
