--- a/index.html
+++ b/index.html
@@ -1540,6 +1540,11 @@ labels:{
       <td>@twitter</td>
       <td></td><td></td>
     </tr>
+<tr><th scope="row" style="position:sticky;left:0px">Redmi 10s</th></tr>
+<tr><th scope="row" style="position:sticky;left:0px">Redmi 10</th></tr>
+<tr><th scope="row" style="position:sticky;left:0px">Redmi 11s</th></tr>
+<tr><th scope="row" style="position:sticky;left:0px">Redmi 1s</th></tr>
+
   </tbody>
 </table>
 </div>  
