--- a/index.html
+++ b/index.html
@@ -1540,10 +1540,10 @@ labels:{
       <td>@twitter</td>
       <td></td><td></td>
     </tr>
-<tr><th scope="row" style="position:sticky;left:0px">Redmi 10s</th><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><th scope="row" style="position:sticky;left:0px">Redmi 10</th><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><th scope="row" style="position:sticky;left:0px">Redmi 11s</th><td></td><td></td><td></td><td></td><td></td></tr>
-<tr><th scope="row" style="position:sticky;left:0px">Redmi 1s</th><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><th scope="row" style="position:sticky;left:0px">Redmi 10s</th><td>jfjd</td><td>riei</td><td></td><td></td><td></td></tr>
+<tr><th scope="row" style="position:sticky;left:0px">Redmi 10</th><td>djsj</td><td>d7e7</td><td></td><td></td><td></td></tr>
+<tr><th scope="row" style="position:sticky;left:0px">Redmi 11s</th><td>udis</td><td>ddd</td><td></td><td></td><td></td></tr>
+<tr><th scope="row" style="position:sticky;left:0px">Redmi 1s</th><td>duisis</td><td>dsee</td><td></td><td></td><td></td></tr>
 
   </tbody>
 </table>
