--- a/index.html
+++ b/index.html
@@ -1400,13 +1400,12 @@ labels:{
  </div>   
 <div style="position:absolute;height:150px;width:42%;padding:6px;background-color:#f6f8f6;right:14px"></div>
     <a href="#" class="btn btn-outline-primary" style="position:absolute;left:14px;bottom:16px">Check price</a>
-<button href="#" class="btn btn-outline-primary d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive2" aria-controls="offcanvasResponsive" style="position:absolute;right:14px;bottom:16px">Check price</button>
-<div class="alert alert-info d-none d-lg-block">Resize your browser to show the responsive offcanvas toggle.</div>
+<button class="btn btn-warning" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" style="position:absolute;right:14px;bottom:16px">Toggle right offcanvas</button>
 
-<div class="offcanvas-lg offcanvas-end" tabindex="-1" id="offcanvasResponsive2" aria-labelledby="offcanvasResponsiveLabel">
+<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
   <div class="offcanvas-header">
-    <h6 style="font-family: 'Comfortaa', cursive;" class="offcanvas-title" id="offcanvasResponsiveLabel">Prices at different websites</h6>
-    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#offcanvasResponsive2" aria-label="Close"></button>
+    <h6 style="font-family: 'Comfortaa', cursive;" class="offcanvas-title" id="offcanvasRightLabel">Prices at different websites</h6>
+     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
 <div style="height:400px;background-color:none;position:relative;border:1px solid #dddddd">
