--- a/index.html
+++ b/index.html
@@ -1425,13 +1425,13 @@ labels:{
 
 <div style="background-color:none;height:400px;position:relative;border:1px solid #dddddd">
 <h3 style="background-color:#f6f6f6;text-align:center;color:teal;font-family:'Georgia';">Price at Shopsy</h3>
-<div style="position:absolute;top:100px;width:120px;height:260px;background-color:none;border:1px solid #dddddd">
+<div style="position:absolute;top:100px;width:140px;height:260px;background-color:none;border:1px solid #dddddd">
 <div style="position:absolute;height:30px;top:0px;width:100%;text-align:center;background-color:#f6f6f6;font-size:16px"><b>Top10tech</b></div>
 <div style="position:absolute;top:20px;height:180px;width:100%;background-color:none">
 <img src="https://m.media-amazon.com/images/I/81B0HJigO-L._SX522_.jpg" class="card-img-top" alt="..." style="padding:1px;height:100px;position:absolute;top:15px;width:85px;align-items:center;left:8px">
 </div>
 <div style="position:absolute;top:145px;height:90px;background-color:none;padding:6px;font-size:12px;width:100%">
-<span style="color:blue"> Redmi Note 10s </span><br><span style="color:blue">4 GB RAM 64 GB storage</span><br><span>MRP <s>16,999</s></span><br><span style="font-size:14px"> INR 13,999 </span></div>
+<span style="color:blue"> Redmi Note 10s </span><br><span style="color:teal;font-size:13px">4 GB RAM 64 GB storage</span><br><span>MRP <s>16,999</s></span><br><span style="font-size:14px"> INR 13,999 </span></div>
 <button type="button" class="btn btn-warning" style="position:absolute;bottom:0px;height:30px;width:100%;background-color:#ffa41d;font-size:14px;text-align:center;padding:0px;border-radius:0px"><span class="bi bi-bag"></span> Buy now</button>
 </div>
 </div>
