--- a/index.html
+++ b/index.html
@@ -1426,6 +1426,13 @@ labels:{
 <div style="background-color:none;height:800px;position:relative;border:1px solid #dddddd">
 <h3 style="background-color:#f6f6f6;text-align:center;color:teal;font-family:'Georgia';">Price at Shopsy</h3>
 
+<div style="position:absolute;left:45%;width:200px;height:280px;background-color:none;top:70px;font-size:13px;padding:0px;border:1px solid #dddddd">
+<div style="position:absolute;top:0px;height:60px;background-color:#f6f6f6;padding:10px;width:100%;text-align:center"><div style="font-size:14px;text-align:center;height:20px;background-color:#f6f6f6"><b>Varient</b></div><span style="font-size:12px">6 GB RAM & 64 GB Storage</span></div>
+<div style="position:absolute;top:55px;width:100%;height:155px;background-color:#f6f6f6;padding:10px">
+<div style="font-size:14px;text-align:center;height:24px;background-color:#f6f6f6"><b>Payment methods</b></div><span style="text-align:left;font-size:12px">1. Credit and Debit cards</span><br><span style="text-align:left;font-size:12px">2. UPI  </span><br><span style="text-align:left;font-size:12px">3. EMI</span><br><span style="text-align:left;font-size:12px">4. Net Banking</span><br><span style="text-align:left;font-size:12px">5. Cash on delivery</span><br><span style="text-align:left;font-size:10px">* It may vary depending upon location</span>
+</div>
+
+
 <div style="position:absolute;top:100px;width:120px;height:260px;background-color:none;border:1px solid #dddddd">
 <div style="position:absolute;height:30px;top:0px;width:100%;text-align:center;background-color:#f6f6f6;font-size:16px"><b>Top10tech</b></div>
 <div style="position:absolute;top:20px;height:180px;width:100%;background-color:none">
