--- a/index.html
+++ b/index.html
@@ -1439,6 +1439,19 @@ labels:{
 
 
 
+<div style="position:absolute;left:45%;width:200px;height:200px;background-color:none;top:220px;font-size:13px;padding:0px;border:1px solid #dddddd">
+<div style="position:absolute;top:0px;height:60px;background-color:#f6f6f6;padding:10px;width:100%;text-align:center"><div style="font-size:14px;text-align:center;height:20px;background-color:#f6f6f6"><b>Varient</b></div><span style="font-size:12px">6 GB RAM & 64 GB Storage</span></div>
+<div style="position:absolute;top:55px;width:100%;height:75px;background-color:#f6f6f6;padding:10px">
+<div style="font-size:14px;text-align:center;height:24px;background-color:#f6f6f6"><b>Payment methods</b></div><span style="text-align:left;font-size:12px"> Cash on delivery</span><br><span style="text-align:left;font-size:10px">* It may vary depending upon location</span>
+</div>
+<div style="position:absolute;bottom:25px;width:100%;height:35px;background-color:#fbfbfb;padding:2px;font-size:11px;text-align:center">
+<span class="bi bi-cash"> Highest price recorded:- Rs 4000 <span class="bi bi-chevron-double-up" style="color:red"></span></span><br>
+<span class="bi bi-cash"> Lowest price recorded:- Rs 2000 <span class="bi bi-chevron-double-down" style="color:green"></span></span><br>
+</div>
+<div style="position:absolute;bottom:0px;width:100%;height:25px;background-color:#dddddd;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
+
+
+
 <div style="position:absolute;top:100px;width:120px;height:260px;background-color:none;border:1px solid #dddddd">
 <div style="position:absolute;height:30px;top:0px;width:100%;text-align:center;background-color:#f6f6f6;font-size:16px"><b>Top10tech</b></div>
 <div style="position:absolute;top:20px;height:180px;width:100%;background-color:none">
