--- a/index.html
+++ b/index.html
@@ -1427,7 +1427,7 @@ labels:{
 <h3 style="background-color:#f6f6f6;text-align:center;color:teal;font-family:'Georgia';">Price at Shopsy</h3>
 
 <div style="position:absolute;left:45%;width:200px;height:200px;background-color:none;top:120px;font-size:13px;padding:0px;border:1px solid #dddddd">
-<div style="position:absolute;top:0px;height:60px;background-color:#fbfbfb;padding:10px;width:100%;text-align:center"><div style="font-size:14px;text-align:center;height:20px;background-color:#f6f6f6"><b>Varient</b></div><span style="font-size:12px">6 GB RAM & 64 GB Storage</span></div>
+<div style="position:absolute;top:0px;height:60px;background-color:#fbfbfb;padding:10px;width:100%;text-align:center"><div style="font-size:14px;text-align:center;height:20px;background-color:#fbfbfb"><b>Varient</b></div><span style="font-size:12px">6 GB RAM & 64 GB Storage</span></div>
 <div style="position:absolute;top:55px;width:100%;height:75px;background-color:#f6f6f6;padding:10px">
 <div style="font-size:14px;text-align:center;height:24px;background-color:#f6f6f6"><b>Payment methods</b></div><span style="text-align:left;font-size:12px"> Cash on delivery</span><br><span style="text-align:left;font-size:10px">* It may vary depending upon location</span>
 </div>
@@ -1439,8 +1439,8 @@ labels:{
 
 
 
-<div style="position:absolute;left:45%;width:200px;height:200px;background-color:none;top:520px;font-size:13px;padding:0px;border:1px solid #dddddd">
-<div style="position:absolute;top:0px;height:60px;background-color:#fbfbfb;padding:10px;width:100%;text-align:center"><div style="font-size:14px;text-align:center;height:20px;background-color:#f6f6f6"><b>Varient</b></div><span style="font-size:12px">6 GB RAM & 64 GB Storage</span></div>
+<div style="position:absolute;left:45%;width:200px;height:200px;background-color:none;top:440px;font-size:13px;padding:0px;border:1px solid #dddddd">
+<div style="position:absolute;top:0px;height:60px;background-color:#fbfbfb;padding:10px;width:100%;text-align:center"><div style="font-size:14px;text-align:center;height:20px;background-color:#fbfbfb"><b>Varient</b></div><span style="font-size:12px">6 GB RAM & 64 GB Storage</span></div>
 <div style="position:absolute;top:55px;width:100%;height:75px;background-color:#f6f6f6;padding:10px">
 <div style="font-size:14px;text-align:center;height:24px;background-color:#f6f6f6"><b>Payment methods</b></div><span style="text-align:left;font-size:12px"> Cash on delivery</span><br><span style="text-align:left;font-size:10px">* It may vary depending upon location</span>
 </div>
