--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@ display:none}
 
              
 
-<br><br>
-    <marquee width="100%" direction="left" height="50px" style="font-size:18px ;" scrollamount="8" behavior="scroll">
+
+    <marquee width="100%" direction="left" height="50px" style="font-size:18px ;display:none" scrollamount="8" behavior="scroll">
       Kindly note that we have done a lot of research in searching the best phones for you. Our priority decreases as we go down the group. We have not included those phones whose data are not correctly found. We will upload it accordingly as soon as we get data. We have also a disclaimer at the bottom or footer of the page
       </marquee>
 
@@ -207,7 +207,7 @@ font:{size:6}
   };
   
 </script>
-
+<div style="display:none">
 <main class="container py-5" style="height:50px;" >
 
 <p>
@@ -1371,7 +1371,7 @@ labels:{
           </div>
 </section>
 
-
+<div>
 
   
   
