--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ display:none}
   
   
   
-  <section class="container pt-5" > 
+  <section class="container pt-5" > <section class="container pt-5" > 
 <div class="card container-fluid" id="hov" style="width:22rem;display:block;height:450px;margin:0px;padding:0px">
   
   <div class="card-body" style="position:relative;width:22rem;height:450px;margin:0px;padding:0px" >
@@ -256,7 +256,7 @@ display:none}
     <a href="#" class="btn btn-primary">Check price</a>
 <a href="#" class="btn btn-success" style="right:0px">Specifications</a>
   </div>
-</div>
+</div><br>
 
   
 
