--- a/index.html
+++ b/index.html
@@ -386,41 +386,78 @@ display:none}
   <thead>
     <tr>
       <th scope="col">#</th>
-      <th scope="col">Processor</th>
-      <th scope="col">RAM size</th>
-      <th scope="col">Camera</th>
-      <th scope="col">Specs</th>
-      <th scope="col">the</th>
-      <th scope="col">dset</th>
-      <th scope="col">gjiu</th>
+      <th scope="col">Processor brand</th>
+      <th scope="col">Clock speed (CPU)</th>
+      <th scope="col">RAM storage</th>
+      <th scope="col">RAM speed</th>
+      <th scope="col">Storage size</th>
+      <th scope="col">Storage type</th>
+      <th scope="col">Antutu score</th>
+      <th scope="col">Geekbench 5 score</th>
+      <th scope="col">Antutu score</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th scope="row" style="position:sticky;left:0px;background-color:#dddddd">Redmi note 10s</th>
+      <th scope="row" style="position:sticky;left:0px;background-color:#dddddd">Poco M4 pro 5g</th>
       <td class="table-success">Mark</td>
       <td>Otto</td>
       <td>@mdo</td>
       <td>apple</td><td>ball</td><td>abcd</td><td>sdfg</td>
     </tr>
     <tr>
-      <th scope="row" style="position:sticky;left:0px;background-color:#dddddd">Oppo A74 5g</th>
+      <th scope="row" style="position:sticky;left:0px;background-color:#dddddd">Realme 9i 5g</th>
       <td>Jacob</td>
       <td class="table-danger">Thornton</td>
       <td>@fat</td>
       <td></td><td></td><td></td><td></td>
     </tr>
     <tr>
-      <th scope="row"  style="position:sticky" >Redmi note 11</th>
+      <th scope="row"  style="position:sticky" >Redmi Note 10s</th>
       <td>Larry the Bird</td>
       <td>This</td>
       <td>@twitter</td>
       <td></td><td></td>
     </tr>
-<tr><th scope="row" style="position:sticky;left:0px">Redmi 10s</th><td>jfjd</td><td>riei</td><td></td><td></td><td></td></tr>
-<tr><th scope="row" style="position:sticky;left:0px">Redmi 10</th><td>djsj</td><td>d7e7</td><td></td><td></td><td></td></tr>
-<tr><th scope="row" style="position:sticky;left:0px">Redmi 11s</th><td>udis</td><td>ddd</td><td></td><td></td><td></td></tr>
-<tr><th scope="row" style="position:sticky;left:0px">Redmi 1s</th><td>duisis</td><td>dsee</td><td></td><td></td><td></td></tr>
+    <tr>
+      <th scope="row"  style="position:sticky" >Oppo A74 5g</th>
+      <td>Larry the Bird</td>
+      <td>This</td>
+      <td>@twitter</td>
+      <td></td><td></td>
+    </tr>
+     <tr>
+      <th scope="row"  style="position:sticky" >Poco M3 pro 5g</th>
+      <td>Larry the Bird</td>
+      <td>This</td>
+      <td>@twitter</td>
+      <td></td><td></td>
+    </tr>
+     <tr>
+      <th scope="row"  style="position:sticky" >Redmi Note 10T 5g</th>
+      <td>Larry the Bird</td>
+      <td>This</td>
+      <td>@twitter</td>
+      <td></td><td></td>
+    </tr>
+     <tr>
+      <th scope="row"  style="position:sticky" ></th>
+      <td>Larry the Bird</td>
+      <td>This</td>
+      <td>@twitter</td>
+      <td></td><td></td>
+    </tr>
+     <tr>
+      <th scope="row"  style="position:sticky" >Motorola G60</th>
+      <td>Larry the Bird</td>
+      <td>This</td>
+      <td>@twitter</td>
+      <td></td><td></td>
+    </tr>
+
+
+
+
 
   </tbody>
 </table>
