--- a/index.html
+++ b/index.html
@@ -394,7 +394,10 @@ display:none}
       <th scope="col">Storage type</th>
       <th scope="col">Antutu score</th>
       <th scope="col">Geekbench 5 score</th>
-      <th scope="col">Antutu score</th>
+      <th scope="col">Battery</th>
+      <th scope="col">Charging speed</th>
+      <th scope="col">Speaker</th>
+      <th scope="col">Headphone jack</th>
     </tr>
   </thead>
   <tbody>
@@ -441,19 +444,27 @@ display:none}
       <td></td><td></td>
     </tr>
      <tr>
-      <th scope="row"  style="position:sticky" ></th>
-      <td>Larry the Bird</td>
-      <td>This</td>
-      <td>@twitter</td>
-      <td></td><td></td>
-    </tr>
-     <tr>
       <th scope="row"  style="position:sticky" >Motorola G60</th>
       <td>Larry the Bird</td>
       <td>This</td>
       <td>@twitter</td>
       <td></td><td></td>
     </tr>
+     <tr>
+      <th scope="row"  style="position:sticky" >Realme Narzo 50</th>
+      <td>Larry the Bird</td>
+      <td>This</td>
+      <td>@twitter</td>
+      <td></td><td></td>
+    </tr>
+     <tr>
+      <th scope="row"  style="position:sticky" >Redmi Note 11</th>
+      <td>Larry the Bird</td>
+      <td>This</td>
+      <td>@twitter</td>
+      <td></td><td></td>
+    </tr>
+
 
 
 
