--- a/index.html
+++ b/index.html
@@ -402,11 +402,11 @@ display:none}
   </thead>
   <tbody>
     <tr>
-      <th scope="row" style="position:sticky;left:0px;background-color:#dddddd">Poco M4 pro 5g</th>
-      <td class="table-success">Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-      <td>apple</td><td>ball</td><td>abcd</td><td>sdfg</td>
+      <th scope="row" style="position:sticky;left:0px;background-color:white">Poco M4 pro 5g</th>
+      <td class="table-success">MediaTek Dimensity 810</td>
+      <td>2400 MHz</td>
+      <td>4/6 GB</td>
+      <td>2133 Mhz</td><td>64/128 GB</td><td>UFS 2.2</td><td>352014</td><td>1798</td><td>5000 mAh</td><td>33 W</td><td>Stereo</td><td>Yes</td>
     </tr>
     <tr>
       <th scope="row" style="position:sticky;left:0px;background-color:#dddddd">Realme 9i 5g</th>
@@ -416,49 +416,49 @@ display:none}
       <td></td><td></td><td></td><td></td>
     </tr>
     <tr>
-      <th scope="row"  style="position:sticky" >Redmi Note 10s</th>
+      <th scope="row"  style="position:sticky;left:0px;background-color:white" >Redmi Note 10s</th>
       <td>Larry the Bird</td>
       <td>This</td>
       <td>@twitter</td>
       <td></td><td></td>
     </tr>
     <tr>
-      <th scope="row"  style="position:sticky" >Oppo A74 5g</th>
+      <th scope="row"  style="position:sticky;left:0px;background-color:white" >Oppo A74 5g</th>
       <td>Larry the Bird</td>
       <td>This</td>
       <td>@twitter</td>
       <td></td><td></td>
     </tr>
      <tr>
-      <th scope="row"  style="position:sticky" >Poco M3 pro 5g</th>
+      <th scope="row"  style="position:sticky;left:0px;background-color:white" >Poco M3 pro 5g</th>
       <td>Larry the Bird</td>
       <td>This</td>
       <td>@twitter</td>
       <td></td><td></td>
     </tr>
      <tr>
-      <th scope="row"  style="position:sticky" >Redmi Note 10T 5g</th>
+      <th scope="row"  style="position:sticky;left:0px;background-color:white">Redmi Note 10T 5g</th>
       <td>Larry the Bird</td>
       <td>This</td>
       <td>@twitter</td>
       <td></td><td></td>
     </tr>
      <tr>
-      <th scope="row"  style="position:sticky" >Motorola G60</th>
+      <th scope="row"  style="position:sticky;left:0px;background-color:white">Motorola G60</th>
       <td>Larry the Bird</td>
       <td>This</td>
       <td>@twitter</td>
       <td></td><td></td>
     </tr>
      <tr>
-      <th scope="row"  style="position:sticky" >Realme Narzo 50</th>
+      <th scope="row" style="position:sticky;left:0px;background-color:white" >Realme Narzo 50</th>
       <td>Larry the Bird</td>
       <td>This</td>
       <td>@twitter</td>
       <td></td><td></td>
     </tr>
      <tr>
-      <th scope="row"  style="position:sticky" >Redmi Note 11</th>
+      <th scope="row"  style="position:sticky;left:0px;background-color:white">Redmi Note 11</th>
       <td>Larry the Bird</td>
       <td>This</td>
       <td>@twitter</td>
