--- a/index.html
+++ b/index.html
@@ -386,18 +386,18 @@ display:none}
   <thead>
     <tr>
       <th scope="col">#</th>
-      <th scope="col">Processor brand</th>
-      <th scope="col">Clock speed (CPU)</th>
-      <th scope="col">RAM storage</th>
-      <th scope="col">RAM speed</th>
-      <th scope="col">Storage size</th>
-      <th scope="col">Storage type</th>
-      <th scope="col">Antutu score</th>
-      <th scope="col">Geekbench 5 score</th>
-      <th scope="col">Battery</th>
-      <th scope="col">Charging speed</th>
-      <th scope="col">Speaker</th>
-      <th scope="col">Headphone jack</th>
+      <th scope="col" style="background-color:white">Processor brand</th>
+      <th scope="col" style="background-color:white">Clock speed (CPU)</th>
+      <th scope="col" style="background-color:white">RAM storage</th>
+      <th scope="col" style="background-color:white">RAM speed</th>
+      <th scope="col" style="background-color:white">Storage size</th>
+      <th scope="col" style="background-color:white" >Storage type</th>
+      <th scope="col" style="background-color:white" >Antutu score</th>
+      <th scope="col" style="background-color:white" >Geekbench 5 score</th>
+      <th scope="col" style="background-color:white" >Battery</th>
+      <th scope="col" style="background-color:white" >Charging speed</th>
+      <th scope="col" style="background-color:white" >Speaker</th>
+      <th scope="col" style="background-color:white" >Headphone jack</th>
     </tr>
   </thead>
   <tbody>
@@ -409,7 +409,7 @@ display:none}
       <td>2133 Mhz</td><td>64/128 GB</td><td>UFS 2.2</td><td>352014</td><td>1798</td><td>5000 mAh</td><td>33 W</td><td>Stereo</td><td>Yes</td>
     </tr>
     <tr>
-      <th scope="row" style="position:sticky;left:0px;background-color:#dddddd">Realme 9i 5g</th>
+      <th scope="row" style="position:sticky;left:0px;background-color:white">Realme 9i 5g</th>
       <td>Jacob</td>
       <td class="table-danger">Thornton</td>
       <td>@fat</td>
