--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ display:none}
     <tr>
       <th scope="col">#</th>
       <th scope="col" style="background-color:white">Processor brand</th>
-      <th scope="col" style="background-color:white">Clock speed (CPU)</th>
+      <th scope="col" style="background-color:white">Speed (CPU)</th>
       <th scope="col" style="background-color:white">RAM storage</th>
       <th scope="col" style="background-color:white">RAM speed</th>
       <th scope="col" style="background-color:white">Storage size</th>
@@ -404,65 +404,145 @@ display:none}
     <tr>
       <th scope="row" style="position:sticky;left:0px;background-color:white">Poco M4 pro 5g</th>
       <td class="table-success">MediaTek Dimensity 810</td>
-      <td>2400 MHz</td>
+      <td>2 4 GHz</td>
       <td>4/6 GB</td>
-      <td>2133 Mhz</td><td>64/128 GB</td><td>UFS 2.2</td><td>352014</td><td>1798</td><td>5000 mAh</td><td>33 W</td><td>Stereo</td><td>Yes</td>
+      <td>2133 Mhz</td>
+      <td>64/128 GB</td>
+      <td>UFS 2.2</td>
+      <td>352014</td>
+      <td>1798</td>
+      <td>5000 mAh</td>
+      <td>33 W</td> 
+      <td>Stereo</td>
+      <td>Yes</td>
     </tr>
     <tr>
       <th scope="row" style="position:sticky;left:0px;background-color:white">Realme 9i 5g</th>
-      <td>Jacob</td>
-      <td class="table-danger">Thornton</td>
-      <td>@fat</td>
-      <td></td><td></td><td></td><td></td>
+      <td>MediaTek Dimensity 810</td>
+      <td class="table-danger">2.4 Ghz</td>
+      <td>4 Gb</td>
+      <td>2133 MHz</td>
+      <td>64 Gb</td>
+      <td>UFS 2.2</td>
+      <td>394519</td>
+      <td>1804</td>
+      <td>5000 mAh</td>
+      <td>18 W</td>
+      <td></td> 
+      <td>Yes</td>
+     
     </tr>
     <tr>
       <th scope="row"  style="position:sticky;left:0px;background-color:white" >Redmi Note 10s</th>
       <td>Larry the Bird</td>
       <td>This</td>
       <td>@twitter</td>
-      <td></td><td></td>
+      <td>4/6 GB</td>
+      <td>2133 Mhz</td>
+      <td>64/128 GB</td>
+      <td>UFS 2.2</td>
+      <td>352014</td>
+      <td>1798</td>
+      <td>5000 mAh</td>
+      <td>33 W</td> 
+      <td>Stereo</td>
+      <td>Yes</td>
     </tr>
     <tr>
       <th scope="row"  style="position:sticky;left:0px;background-color:white" >Oppo A74 5g</th>
       <td>Larry the Bird</td>
       <td>This</td>
       <td>@twitter</td>
-      <td></td><td></td>
+      <td>4/6 GB</td>
+      <td>2133 Mhz</td>
+      <td>64/128 GB</td>
+      <td>UFS 2.2</td>
+      <td>352014</td>
+      <td>1798</td>
+      <td>5000 mAh</td>
+      <td>33 W</td> 
+      <td>Stereo</td>
+      <td>Yes</td>
     </tr>
      <tr>
       <th scope="row"  style="position:sticky;left:0px;background-color:white" >Poco M3 pro 5g</th>
       <td>Larry the Bird</td>
       <td>This</td>
       <td>@twitter</td>
-      <td></td><td></td>
+      <td>4/6 GB</td>
+      <td>2133 Mhz</td>
+      <td>64/128 GB</td>
+      <td>UFS 2.2</td>
+      <td>352014</td>
+      <td>1798</td>
+      <td>5000 mAh</td>
+      <td>33 W</td> 
+      <td>Stereo</td>
+      <td>Yes</td>
     </tr>
      <tr>
       <th scope="row"  style="position:sticky;left:0px;background-color:white">Redmi Note 10T 5g</th>
       <td>Larry the Bird</td>
       <td>This</td>
       <td>@twitter</td>
-      <td></td><td></td>
+      <td>4/6 GB</td>
+      <td>2133 Mhz</td>
+      <td>64/128 GB</td>
+      <td>UFS 2.2</td>
+      <td>352014</td>
+      <td>1798</td>
+      <td>5000 mAh</td>
+      <td>33 W</td> 
+      <td>Stereo</td>
+      <td>Yes</td>
     </tr>
      <tr>
       <th scope="row"  style="position:sticky;left:0px;background-color:white">Motorola G60</th>
       <td>Larry the Bird</td>
       <td>This</td>
       <td>@twitter</td>
-      <td></td><td></td>
+      <td>4/6 GB</td>
+      <td>2133 Mhz</td>
+      <td>64/128 GB</td>
+      <td>UFS 2.2</td>
+      <td>352014</td>
+      <td>1798</td>
+      <td>5000 mAh</td>
+      <td>33 W</td> 
+      <td>Stereo</td>
+      <td>Yes</td>
     </tr>
      <tr>
       <th scope="row" style="position:sticky;left:0px;background-color:white" >Realme Narzo 50</th>
       <td>Larry the Bird</td>
       <td>This</td>
       <td>@twitter</td>
-      <td></td><td></td>
+      <td>4/6 GB</td>
+      <td>2133 Mhz</td>
+      <td>64/128 GB</td>
+      <td>UFS 2.2</td>
+      <td>352014</td>
+      <td>1798</td>
+      <td>5000 mAh</td>
+      <td>33 W</td> 
+      <td>Stereo</td>
+      <td>Yes</td>
     </tr>
      <tr>
       <th scope="row"  style="position:sticky;left:0px;background-color:white">Redmi Note 11</th>
       <td>Larry the Bird</td>
       <td>This</td>
       <td>@twitter</td>
-      <td></td><td></td>
+      <td>4/6 GB</td>
+      <td>2133 Mhz</td>
+      <td>64/128 GB</td>
+      <td>UFS 2.2</td>
+      <td>352014</td>
+      <td>1798</td>
+      <td>5000 mAh</td>
+      <td>33 W</td> 
+      <td>Stereo</td>
+      <td>Yes</td>
     </tr>
 
 
