--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ display:none}
   <table class="table">
   <thead>
     <tr>
-      <th scope="col">#</th>
+      <th scope="col" style="background-color:white">#</th>
       <th scope="col" style="background-color:white">Processor brand</th>
       <th scope="col" style="background-color:white">Speed (CPU)</th>
       <th scope="col" style="background-color:white">RAM storage</th>
@@ -403,29 +403,29 @@ display:none}
   <tbody>
     <tr>
       <th scope="row" style="position:sticky;left:0px;background-color:white">Poco M4 pro 5g</th>
-      <td class="table-success">MediaTek Dimensity 810</td>
-      <td>2 4 GHz</td>
+      <td>MediaTek Dimensity 810</td>
+      <td class="table-success">2.4 GHz</td>
       <td>4/6 GB</td>
       <td>2133 Mhz</td>
       <td>64/128 GB</td>
-      <td>UFS 2.2</td>
+      <td class="table-success">UFS 2.2</td>
       <td>352014</td>
       <td>1798</td>
       <td>5000 mAh</td>
-      <td>33 W</td> 
-      <td>Stereo</td>
+      <td class="table-success">33 W</td> 
+      <td class="table-success">Stereo</td>
       <td>Yes</td>
     </tr>
     <tr>
       <th scope="row" style="position:sticky;left:0px;background-color:white">Realme 9i 5g</th>
       <td>MediaTek Dimensity 810</td>
-      <td class="table-danger">2.4 Ghz</td>
-      <td>4 Gb</td>
+      <td class="table-success">2.4 Ghz</td>
+      <td class="table-danger">4 Gb</td>
       <td>2133 MHz</td>
       <td>64 Gb</td>
-      <td>UFS 2.2</td>
-      <td>394519</td>
-      <td>1804</td>
+      <td class="table-success">UFS 2.2</td>
+      <td class="table-success" >394519</td>
+      <td class="table-success">1804</td>
       <td>5000 mAh</td>
       <td>18 W</td>
       <td></td> 
@@ -437,21 +437,21 @@ display:none}
       
       <td>Mediatek Helio G95</td>
       <td>2.05 GHz</td>
-      <td>6/8 GB</td>
+      <td class="table-success">6/8 GB</td>
       <td>2133 Mhz</td>
       <td>64/128 GB</td>
-      <td>UFS 2.2</td>
+      <td class="table-success">UFS 2.2</td>
       <td>335001</td>
-      <td>1585</td>
+      <td class="table-danger">1585</td>
       <td>5000 mAh</td>
-      <td>33 W</td> 
-      <td>Stereo</td>
+      <td class="table-success">33 W</td> 
+      <td class="table-success">Stereo</td>
       <td>Yes</td>
     </tr>
     <tr>
       <th scope="row"  style="position:sticky;left:0px;background-color:white" >Oppo A74 5g</th>
       <td>Qualcomm Snapdragon 480 5G</td>
-      <td>2 GHz</td>
+      <td class="table-danger">2 GHz</td>
       <td>6 GB</td>
       <td>2133 MHz</td>
       <td>128 GB</td>
@@ -467,11 +467,11 @@ display:none}
       <th scope="row"  style="position:sticky;left:0px;background-color:white" >Poco M3 pro 5g</th>
       <td>MediaTek Dimensity 700</td>
       <td>2.2 Ghz</td>
-      <td>4 Gb</td>
+      <td class="table-danger">4 Gb</td>
       <td>2133 Mhz</td>
       <td>64 GB</td>
-      <td>UFS 2.2</td>
-      <td>259126</td>
+      <td class="table-success">UFS 2.2</td>
+      <td class="table-danger">259126</td>
       <td>1746</td>
       <td>5000 mAh</td>
       <td>18 W (Fast)</td> 
@@ -486,7 +486,7 @@ display:none}
       <td>4/6 GB</td>
       <td>2133 Mhz</td>
       <td>64/128 GB</td>
-      <td>UFS 2.2</td>
+      <td class="table-success">UFS 2.2</td>
       <td>269703</td>
       <td>1689</td>
       <td>5000 mAh</td>
@@ -506,7 +506,7 @@ display:none}
       <td>UFS 2.1</td>
       <td>334281</td>
       <td>1791</td>
-      <td>6000 mAh</td>
+      <td class="table-success">6000 mAh</td>
       <td>20 W (Fast)</td> 
       <td>Mono</td>
       <td>Yes</td>
@@ -523,7 +523,7 @@ display:none}
       <td>326638</td>
       <td>1769</td>
       <td>5000 mAh</td>
-      <td>33 W</td> 
+      <td class="table-success">33 W</td> 
       <td>Mono</td>
       <td>Yes</td>
     </tr>
@@ -532,16 +532,16 @@ display:none}
       <th scope="row"  style="position:sticky;left:0px;background-color:white">Motorola G60</th>
      
       <td>Qualcomm Snapdragon 680</td>
-      <td>2.4 GHz</td>
+      <td class="table-success">2.4 GHz</td>
       <td>4/6 GB</td>
       <td>2133 Mhz</td>
       <td>64/128 GB</td>
-      <td>UFS 2.2</td>
+      <td class="table-success">UFS 2.2</td>
       <td>280385</td>
       <td>1677</td>
       <td>5000 mAh</td>
-      <td>33 W</td> 
-      <td>Stereo</td>
+      <td class="table-success">33 W</td> 
+      <td class="table-success">Stereo</td>
       <td>Yes</td>
     </tr>
 
