--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ display:none}
 <span class="bi bi-memory" style="font-size:12px"> RAM- 6 GB or 8 GB (2133 Mhz)  </span><br>
 <span class="bi bi-battery-charging" style="font-size:12px"> Battery- 5000 mAh (Li-Po)</span><br>
 <span class="bi bi-lightning-charge" style="font-size:12px"> Charging- 33 W (Fast charging) </span><br>
-<span class="bi bi-camera" style="font-size:12px;position:relative"> Cameras :-</span><span style="position:absolute;left:72px;height:90px;width:100px;background-color:#f6f6f6;font-size:10px;margin:0px;padding:5px;overflow:hidden"><span> 64 MP (Main)</span><br><span> 8 MP (Ultra wide)</span><br><span> 2 MP (Macro lens)</span><br><span> 2 MP (Depth lens)</span><br><span> 13 MP (Front)</span></span>  </div>
+<span class="bi bi-camera" style="font-size:12px;position:relative"> f :-</span><span style="position:absolute;left:72px;height:90px;width:100px;background-color:#f6f6f6;font-size:10px;margin:0px;padding:5px;overflow:hidden"><span> 64 MP (Main)</span><br><span> 8 MP (Ultra wide)</span><br><span> 2 MP (Macro lens)</span><br><span> 2 MP (Depth lens)</span><br><span> 13 MP (Front)</span></span>  </div>
 <br><br><br><br>
 <div style="position:absolute;top:50%;height:50%;width:100%;margin:0px;padding:14px;background-color:none">
 
@@ -251,7 +251,13 @@ display:none}
 <div style="position:absolute;background-color:#f6f8f6;height:150px;width:42%;padding:8px">
     <p class="card-text" style="font-size:12px">Our rating's -<i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i></p>
  </div>   
-<div style="position:absolute;height:150px;width:42%;padding:6px;background-color:#f6f8f6;right:14px"></div>
+<div style="position:absolute;height:150px;width:42%;padding:6px;background-color:#f6f8f6;right:14px">
+  <span class="bi bi-camera" style="font-size:12px"> Cameras :-</span><br><span style="font-size:14px;margin:0px;padding:5px;overflow:hidden"><span> 64 MP (Main)</span><br><span> 8 MP (Ultra wide)</span><br><span> 2 MP (Macro lens)</span><br><span> 2 MP (Depth lens)</span><br><span> 13 MP (Front)</span></span>  </div>
+  
+  
+  
+  
+  </div>
     <a href="#" class="btn btn-outline-primary" style="position:absolute;left:14px;bottom:16px">Check price</a>
 <button class="btn btn-warning" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" style="position:absolute;right:14px;bottom:16px">View prices</button>
 
