--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ display:none}
     <p class="card-text" style="font-size:12px">Our rating's -<i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i></p>
  </div>   
 <div style="position:absolute;height:150px;width:42%;padding:6px;background-color:#f6f8f6;right:14px">
-  <span class="bi bi-camera" style="font-size:12px"> Cameras :-</span><br><span style="font-size:14px;margin:0px;padding:5px;overflow:hidden"><span> 64 MP (Main)</span><br><span> 8 MP (Ultra wide)</span><br><span> 2 MP (Macro lens)</span><br><span> 2 MP (Depth lens)</span><br><span> 13 MP (Front)</span></span>  </div>
+  <span class="bi bi-camera" style="font-size:12px"><b> Cameras :-</b></span><br><span style="font-size:14px;margin:0px;padding:5px;overflow:hidden"><span>64 MP (Main)</span><br><span> 8 MP (Ultra wide)</span><br><span> 2 MP (Macro lens)</span><br><span> 2 MP (Depth lens)</span><br><span> 13 MP (Front)</span></span>  </div>
   
   
   
