--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@ display:none}
 .chart2{display:block}
   .images_extra{display:none}
 }
+ @media screen and (min-width:1000px){
+   .phone_container{display:block;top:0px}
+}
 
 
 </style>
@@ -123,7 +126,7 @@ display:none}
   
   <section class="container pt-5" > <section class="container pt-5" > 
 
-<div class="card container-fluid" id="hov" style="width:22rem;display:inline-block;height:450px;margin:0px;padding:0px">
+<div class="card container-fluid phone_container" id="hov" style="width:22rem;display:inline-block;height:450px;margin:0px;padding:0px">
   <div class="card-body" style="position:relative;width:22rem;height:450px;margin:0px;padding:0px" >
 <div style="position:absolute;top:0px;left:5px;width:60px;height:32px;background-color:#b12703;color:white;padding:3px">20% off</div>
 <div style="position:absolute;top:0px;left:25%;right:25%;background-color:#f6f6f6;width:160px;height:26px;text-align:center;color:teal"> Redmi note 10s</div>
@@ -232,7 +235,7 @@ display:none}
 </div>
 <br><br>
 
-<div class="card container-fluid" id="hov" style="width:22rem;display:inline-block;height:450px;margin:0px;padding:0px">
+<div class="card container-fluid phone_container" id="hov" style="width:22rem;display:inline-block;height:450px;margin:0px;padding:0px;position:relative;top:20px">
   
   <div class="card-body" style="position:relative;width:22rem;height:450px;margin:0px;padding:0px" >
 <div style="position:absolute;top:0px;left:5px;width:60px;height:32px;background-color:#b12703;color:white;padding:3px">20% off</div>
@@ -252,7 +255,7 @@ display:none}
     <p class="card-text" style="font-size:12px">Our rating's -<i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i></p>
  </div>   
 <div style="position:absolute;height:150px;width:42%;padding:6px;background-color:#f6f8f6;right:14px">
-  <span class="bi bi-camera" style="font-size:12px"><b> Cameras :-</b></span><br><span style="font-size:14px;margin:0px;padding:5px;overflow:hidden"><span>64 MP (Main)</span><br><span> 8 MP (Ultra wide)</span><br><span> 2 MP (Macro lens)</span><br><span> 2 MP (Depth lens)</span><br><span> 13 MP (Front)</span></span>  </div>
+  <span class="bi bi-camera" style="font-size:12px"><b> Cameras :-</b></span><br><span style="font-size:14px;margin:0px;padding:5px;overflow:hidden"><span> 64 MP (Main)</span><br><span> 8 MP (Ultra wide)</span><br><span> 2 MP (Macro lens)</span><br><span> 2 MP (Depth lens)</span><br><span> 13 MP (Front)</span></span>  </div>
   
   
   
