--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ display:none}
   .images_extra{display:none}
 }
  @media screen and (min-width:1000px){
-   .phone_container{display:block;top:0px}
+   .phone_container{display:block;top:-20px}
 }
 
 
@@ -137,7 +137,7 @@ display:none}
 <span class="bi bi-memory" style="font-size:12px"> RAM- 6 GB or 8 GB (2133 Mhz)  </span><br>
 <span class="bi bi-battery-charging" style="font-size:12px"> Battery- 5000 mAh (Li-Po)</span><br>
 <span class="bi bi-lightning-charge" style="font-size:12px"> Charging- 33 W (Fast charging) </span><br>
-<span class="bi bi-camera" style="font-size:12px;position:relative"> f :-</span><span style="position:absolute;left:72px;height:90px;width:100px;background-color:#f6f6f6;font-size:10px;margin:0px;padding:5px;overflow:hidden"><span> 64 MP (Main)</span><br><span> 8 MP (Ultra wide)</span><br><span> 2 MP (Macro lens)</span><br><span> 2 MP (Depth lens)</span><br><span> 13 MP (Front)</span></span>  </div>
+<span class="bi bi-cpu-fill" style="font-size:12px;position:relative"> f :-</span><span style="position:absolute;left:72px;height:90px;width:100px;background-color:#f6f6f6;font-size:10px;margin:0px;padding:5px;overflow:hidden"><span>Proximity sensor</span><br><span>Gyroscope</span><br><span>Accelerometer</span><br><span>Ambient light sensor</span><br><span>Fingerprint</span></span>  </div>
 <br><br><br><br>
 <div style="position:absolute;top:50%;height:50%;width:100%;margin:0px;padding:14px;background-color:none">
 
