--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ display:none}
 
 <div class="card container-fluid phone_container" id="hov" style="width:22rem;display:inline-block;height:450px;margin:0px;padding:0px">
   <div class="card-body" style="position:relative;width:22rem;height:450px;margin:0px;padding:0px" >
-<div style="position:absolute;top:0px;left:5px;width:60px;height:32px;background-color:#b12703;color:white;padding:3px">20% off</div>
+<div style="position:absolute;top:0px;left:5px;width:60px;height:32px;background-color:#b12703;color:white;padding:3px;text-align:center"># 1</div>
 <div style="position:absolute;top:0px;left:25%;right:25%;background-color:#f6f6f6;width:160px;height:26px;text-align:center;color:teal"> Redmi note 10s</div>
 <div style="position:absolute;height:50%;width:38%;left:0px;align-items:center">
     <img src="https://m.media-amazon.com/images/I/81B0HJigO-L._SX522_.jpg" class="card-img-top" alt="..." style="padding:1px;height:160px;position:absolute;top:40px;width:140px"></div>
@@ -237,7 +237,7 @@ display:none}
 
 <div class="card container-fluid phone_container" id="hov" style="width:22rem;display:inline-block;height:450px;margin:0px;padding:0px;position:relative;top:20px">  
   <div class="card-body" style="position:relative;width:22rem;height:450px;margin:0px;padding:0px" >
-<div style="position:absolute;top:0px;left:5px;width:60px;height:32px;background-color:#b12703;color:white;padding:3px">20% off</div>
+<div style="position:absolute;top:0px;left:5px;width:60px;height:32px;background-color:#b12703;color:white;padding:3px;text-align:center"># 2</div>
 <div style="position:absolute;top:0px;left:25%;right:25%;background-color:#f6f6f6;width:160px;height:26px;text-align:center;color:teal"> Redmi note 10s</div>
 <div style="position:absolute;height:50%;width:38%;left:0px;align-items:center">
     <img src="https://m.media-amazon.com/images/I/81B0HJigO-L._SX522_.jpg" class="card-img-top" alt="..." style="padding:1px;height:160px;position:absolute;top:40px;width:140px"></div>
