--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ display:none}
 
 <div class="card container-fluid phone_container" id="hov" style="width:22rem;display:inline-block;height:450px;margin:0px;padding:0px">
   <div class="card-body" style="position:relative;width:22rem;height:450px;margin:0px;padding:0px" >
-<div style="position:absolute;top:0px;left:5px;width:60px;height:32px;background-color:#b12703;color:white;padding:3px;text-align:center"># 1</div>
+<div style="position:absolute;top:0px;left:5px;width:60px;height:32px;background-color:#b12703;color:white;padding:3px;text-align:center"># 3</div>
 <div style="position:absolute;top:0px;left:25%;right:25%;background-color:#f6f6f6;width:160px;height:26px;text-align:center;color:teal"> Redmi note 10s</div>
 <div style="position:absolute;height:50%;width:38%;left:0px;align-items:center">
     <img src="https://m.media-amazon.com/images/I/81B0HJigO-L._SX522_.jpg" class="card-img-top" alt="..." style="padding:1px;height:160px;position:absolute;top:40px;width:140px"></div>
@@ -137,14 +137,16 @@ display:none}
 <span class="bi bi-memory" style="font-size:12px"> RAM- 6 GB or 8 GB (2133 Mhz)  </span><br>
 <span class="bi bi-battery-charging" style="font-size:12px"> Battery- 5000 mAh (Li-Po)</span><br>
 <span class="bi bi-lightning-charge" style="font-size:12px"> Charging- 33 W (Fast charging) </span><br>
-<span class="bi bi-cpu-fill" style="font-size:12px;position:relative">Sensors :-</span><span style="position:absolute;left:72px;height:90px;width:120px;background-color:#f6f6f6;font-size:10px;margin:0px;padding:5px;overflow:hidden"><span>Proximity sensor</span><br><span>Gyroscope</span><br><span>Accelerometer</span><br><span>Ambient light sensor</span><br><span>Fingerprint</span></span>  </div>
+<span class="bi bi-cpu-fill" style="font-size:12px;position:relative"> Sensors :-</span><span style="position:absolute;left:72px;height:90px;width:120px;background-color:#f6f6f6;font-size:10px;margin:0px;padding:5px;overflow:hidden"><span>Proximity sensor</span><br><span>Gyroscope</span><br><span>Accelerometer</span><br><span>Ambient light sensor</span><br><span>Fingerprint</span></span>  </div>
 <br><br><br><br>
 <div style="position:absolute;top:50%;height:50%;width:100%;margin:0px;padding:14px;background-color:none">
 
 <div style="position:absolute;background-color:#f6f8f6;height:150px;width:42%;padding:8px">
     <p class="card-text" style="font-size:12px">Our rating's -<i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i></p>
  </div>   
-<div style="position:absolute;height:150px;width:42%;padding:6px;background-color:#f6f8f6;right:14px"></div>
+<div style="position:absolute;height:150px;width:42%;padding:6px;background-color:#f6f8f6;right:14px">
+    <span class="bi bi-camera" style="font-size:12px"><b> Cameras :-</b></span><br><span style="font-size:14px;margin:0px;padding:2px;overflow:hidden"><span> 64 MP (Main)</span><br><span> 8 MP (Ultra wide)</span><br><span> 2 MP (Macro lens)</span><br><span> 2 MP (Depth lens)</span><br><span> 13 MP (Front)</span></span>  </div>  
+</div>
     <a href="#" class="btn btn-outline-primary" style="position:absolute;left:14px;bottom:16px">Check price</a>
 <button class="btn btn-warning" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" style="position:absolute;right:14px;bottom:16px">View prices</button>
 
@@ -167,7 +169,7 @@ display:none}
 <span class="bi bi-cash"> Highest price recorded:- Rs 4000 <span class="bi bi-chevron-double-up" style="color:red"></span></span><br>
 <span class="bi bi-cash"> Lowest price recorded:- Rs 2000 <span class="bi bi-chevron-double-down" style="color:green"></span></span><br>
 </div>
-<div style="position:absolute;bottom:0px;width:100%;height:25px;background-color:#dddddd;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
+<div style="position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
 </div>  <br>
 
 <div style="background-color:none;height:800px;position:relative;border:1px solid #dddddd">
@@ -182,7 +184,7 @@ display:none}
 <span class="bi bi-cash"> Highest price recorded:- Rs 4000 <span class="bi bi-chevron-double-up" style="color:red"></span></span><br>
 <span class="bi bi-cash"> Lowest price recorded:- Rs 2000 <span class="bi bi-chevron-double-down" style="color:green"></span></span><br>
 </div>
-<div style="position:absolute;bottom:0px;width:100%;height:25px;background-color:#dddddd;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
+<div style="position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
 
 
 
@@ -195,7 +197,7 @@ display:none}
 <span class="bi bi-cash"> Highest price recorded:- Rs 4000 <span class="bi bi-chevron-double-up" style="color:red"></span></span><br>
 <span class="bi bi-cash"> Lowest price recorded:- Rs 2000 <span class="bi bi-chevron-double-down" style="color:green"></span></span><br>
 </div>
-<div style="position:absolute;bottom:0px;width:100%;height:25px;background-color:#dddddd;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
+<div style="position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
 
 
 
@@ -282,7 +284,7 @@ display:none}
 <span class="bi bi-cash"> Highest price recorded:- Rs 4000 <span class="bi bi-chevron-double-up" style="color:red"></span></span><br>
 <span class="bi bi-cash"> Lowest price recorded:- Rs 2000 <span class="bi bi-chevron-double-down" style="color:green"></span></span><br>
 </div>
-<div style="position:absolute;bottom:0px;width:100%;height:25px;background-color:#dddddd;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
+<div style="position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
 </div>  <br>
 
 <div style="background-color:none;height:800px;position:relative;border:1px solid #dddddd">
@@ -291,13 +293,13 @@ display:none}
 <div style="position:absolute;left:45%;width:200px;height:200px;background-color:none;top:120px;font-size:13px;padding:0px;border:1px solid #dddddd">
 <div style="position:absolute;top:0px;height:60px;background-color:#fbfbfb;padding:10px;width:100%;text-align:center"><div style="font-size:14px;text-align:center;height:20px;background-color:#fbfbfb"><b>Varient</b></div><span style="font-size:12px">6 GB RAM & 64 GB Storage</span></div>
 <div style="position:absolute;top:55px;width:100%;height:75px;background-color:#f6f6f6;padding:10px">
-<div style="font-size:14px;text-align:center;height:24px;background-color:#f6f6f6"><b>Payment methods</b></div><span style="text-align:left;font-size:12px"> Cash on delivery</span><br><span style="text-align:left;font-size:10px">* It may vary depending upon location</span>
+<div style="font-size:14px;text-align:center;height:24px;background-color:#f6f8f6"><b>Payment methods</b></div><span style="text-align:left;font-size:12px"> Cash on delivery</span><br><span style="text-align:left;font-size:10px">* It may vary depending upon location</span>
 </div>
 <div style="position:absolute;bottom:25px;width:100%;height:35px;background-color:#fbfbfb;padding:2px;font-size:11px;text-align:center">
 <span class="bi bi-cash"> Highest price recorded:- Rs 4000 <span class="bi bi-chevron-double-up" style="color:red"></span></span><br>
 <span class="bi bi-cash"> Lowest price recorded:- Rs 2000 <span class="bi bi-chevron-double-down" style="color:green"></span></span><br>
 </div>
-<div style="position:absolute;bottom:0px;width:100%;height:25px;background-color:#dddddd;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
+<div style="position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
 
 
 
@@ -310,7 +312,7 @@ display:none}
 <span class="bi bi-cash"> Highest price recorded:- Rs 4000 <span class="bi bi-chevron-double-up" style="color:red"></span></span><br>
 <span class="bi bi-cash"> Lowest price recorded:- Rs 2000 <span class="bi bi-chevron-double-down" style="color:green"></span></span><br>
 </div>
-<div style="position:absolute;bottom:0px;width:100%;height:25px;background-color:#dddddd;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
+<div style="position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
 
 
 
